fixed whitespace and color in chore manager,display

--- a/src/components/chore-manager/chore-manager.css
+++ b/src/components/chore-manager/chore-manager.css
@@ -19,7 +19,8 @@
 /*}*/
 
 .hci-create-group {
-    height: 100px;
+    height: 90px;
+    margin-bottom: 10px;
 }
 
 
